<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.GasEtaActivity">

    <TextView
        android:id="@+id/txtTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="16dp"
        android:gravity="center_horizontal"
        android:text="@string/txt_titulo"
        android:textSize="24sp"
        android:textStyle="bold" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="23dp"
        android:layout_marginBottom="16dp"
        android:src="@drawable/gaseta" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:gravity="center"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/editGasolina"
            android:layout_width="128dp"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="48dp"
            android:background="@drawable/rounded_edit_text"
            android:hint="@string/txt_hint_edit_gasolina"
            android:inputType="numberDecimal"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:textAlignment="viewStart"
            android:textColor="@color/btgTxt"
            android:textColorHint="@color/btgTxt" />

        <EditText
            android:id="@+id/editEtanol"
            android:layout_width="128dp"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/rounded_edit_text"
            android:ems="10"
            android:hint="@string/txt_hint_edit_etanol"
            android:inputType="numberDecimal"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:textAlignment="viewStart"
            android:textColor="@color/btgTxt"
            android:textColorHint="@color/btgTxt" />


    </androidx.appcompat.widget.LinearLayoutCompat>

    <Button
        android:id="@+id/btnCalcular"
        android:layout_width="wrap_content"
        android:layout_height="52dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/black"
        android:backgroundTintMode="add"
        android:hint="@string/txt_button_calcular"
        android:textColorHint="@color/white" />

    <TextView
        android:id="@+id/txtResultado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="center_horizontal"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:text="@string/txt_resultado"
        android:textColor="@color/btgTxt"
        android:textSize="24sp"
        android:textStyle="bold" />


    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingBottom="10dp">

        <Button
            android:id="@+id/btnLimpar"
            android:layout_width="wrap_content"
            android:layout_height="52dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="5dp"
            android:backgroundTint="@color/black"
            android:backgroundTintMode="add"
            android:hapticFeedbackEnabled="true"
            android:hint="@string/txt_button_limpar"
            android:textColorHint="@color/white" />

        <Button
            android:id="@+id/btnSalvar"
            android:layout_width="wrap_content"
            android:layout_height="52dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="5dp"
            android:backgroundTint="@color/btgTxt"
            android:backgroundTintMode="add"
            android:enabled="false"
            android:hint="@string/txt_button_salvar"
            android:textColorHint="@color/white" />

    </androidx.appcompat.widget.LinearLayoutCompat>


    <Button
        android:id="@+id/btnFinalizar"
        android:layout_width="match_parent"
        android:layout_height="59dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/black"
        android:hapticFeedbackEnabled="true"
        android:hint="@string/txt_button_finalizar"
        android:textColorHint="@color/white" />

</androidx.appcompat.widget.LinearLayoutCompat>